fixed z-index of navbar

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -18,6 +18,7 @@ body{
     justify-content: space-between;
     padding-left: 20px;
     padding-right: 20px;
+    z-index: 1;
 }
 
 
